[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/FreePixel.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/lights_off.ogg" type="AudioStream" id=2]
[ext_resource path="res://ui/GameOver.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 112
outline_color = Color( 0.635294, 0.639216, 0.709804, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 96
outline_color = Color( 0.635294, 0.639216, 0.709804, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 195
outline_color = Color( 0.635294, 0.639216, 0.709804, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 60
font_data = ExtResource( 1 )

[node name="GameOverScreen" type="ColorRect"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.823529 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 232.0
margin_top = 130.0
margin_right = 1688.0
margin_bottom = 950.0
custom_constants/separation = 50

[node name="Reason" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 1456.0
margin_bottom = 112.0
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "Your heart stopped beating"
align = 1
valign = 1

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 162.0
margin_right = 1456.0
margin_bottom = 258.0
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
text = "after"
align = 1
valign = 1

[node name="DanceMoveCount" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 308.0
margin_right = 1456.0
margin_bottom = 504.0
size_flags_vertical = 7
custom_fonts/font = SubResource( 3 )
text = "75"
align = 1
valign = 1

[node name="Label3" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 554.0
margin_right = 1456.0
margin_bottom = 650.0
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
text = "dance moves!"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 700.0
margin_right = 1456.0
margin_bottom = 820.0
alignment = 1

[node name="PlayAgainButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 163.0
margin_right = 563.0
margin_bottom = 120.0
rect_min_size = Vector2( 400, 120 )
size_flags_horizontal = 6
custom_fonts/font = SubResource( 4 )
text = "Play again"

[node name="MenuButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 893.0
margin_right = 1293.0
margin_bottom = 120.0
rect_min_size = Vector2( 400, 120 )
size_flags_horizontal = 6
custom_fonts/font = SubResource( 4 )
text = "Main menu"

[node name="Tween" type="Tween" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[connection signal="button_up" from="CenterContainer/VBoxContainer/HBoxContainer/PlayAgainButton" to="." method="_on_PlayAgainButton_button_up"]
[connection signal="button_up" from="CenterContainer/VBoxContainer/HBoxContainer/MenuButton" to="." method="_on_MenuButton_button_up"]
